# initial_translation

./: .gitignore  README.md  pyproject.toml
configs/: lang_codes.yaml
configs/datasets/: configs.code-workspace  reference50.yaml  wmt24pp.yaml
configs/metrics/: bleu.yaml  comet_wmt22_da.yaml  cometkiwi_wmt22_qe.yaml  cometkiwi_wmt22_qe_ctx.yaml  cometkiwi_wmt23_xl_qe.yaml  cometkiwi_wmt23_xl_qe_ctx.yaml  cometkiwi_wmt23_xxl_qe.yaml  cometkiwi_wmt23_xxl_qe_ctx.yaml  metricx24_qe.yaml  metricx24_ref.yaml  metricx24_xl_qe.yaml  metricx24_xl_ref.yaml  metricx24_xxl_qe.yaml  metricx24_xxl_ref.yaml  xcomet_mqm.yaml  xcomet_mqm_ctx.yaml  xcomet_qe.yaml  xcomet_qe_ctx.yaml  xcomet_xl_qe.yaml  xcomet_xxl_qe.yaml
configs/models/: deepseek_v3.yaml  gemma3_27b_it.yaml  gpt_oss_120b.yaml  qwen3_235b_a22b_instruct_2507.yaml  translategemma_27b_it.yaml  translategemma_4b_it.yaml
evalmt/: config.py
evalmt/align/: __init__.py  labse_align.py
evalmt/cli/: aggregate.py  aggregate_combos.py  docops.py  generate.py  prepare_data.py  score.py  serve_vllm.py  wait_server.py
evalmt/datasets/: base.py  registry.py  wmt24pp.py
evalmt/generation/: prompts.py  translategemma_prompt.py  (+1 more)
scripts/: _pipeline_lib.sh  aggregate.sh  clean_gpu.sh  doc_combos.sh  doctor.sh  fetch_metricx.sh  generate.sh  install_vllm_gptoss.sh  pipeline_align.sh  pipeline_all.sh  pipeline_generate.sh  pipeline_score.sh  prepare_data.sh  run_all.sh  run_reference50_doc_ctx.sh  run_wmt24pp_all.sh  score.sh  serve_vllm.sh  setup_metric_envs.sh  setup_vllm_env.sh  stop_vllm.sh  uv_sync.sh  wait_server.sh
(+9 files in other folders)
